--- a/style.css
+++ b/style.css
@@ -3,11 +3,21 @@ div {
 }
 
 body {
-  background-image: url("https://images.template.net/wp-content/uploads/2016/05/12060913/Abstract-Light-Rainbow-Background.jpg");
-  background-size: 110%;
-  background-position: 40% 26%;
-
+  background: #102a54;
 }
+
+canvas {
+	display: block;
+}
+
+.circle {
+			width: 20px;
+			height: 20px;
+			border: 1px solid #000;
+			position: absolute;
+			border-radius: 15px;
+}
+
 /* First 4 buttons */
 #MainButton {
     display: block;
